--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>Taximan - Dumplings 2016</title>
+    <meta charset="utf-8"/>
+    <title>TAXI MAN :: Dumplings 2016</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-	<div id="content"></div>
-
-	<script src="./dist/bundle.js"></script>
+    <div id="game"></div>
+    <script src="./dist/phaser.bundle.js"></script>
+    <script src="./dist/game.bundle.js"></script>
 </body>
 </html>
