--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8"/>
     <title>TAXI MAN :: Dumplings 2016</title>
     <link rel="stylesheet" href="styles/main.css">
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-5140088-38', 'auto');
+        ga('require', 'linkid', 'linkid.js');
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body>
     <div id="game"></div>
