Add nick input to put user name

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
     </script>
 </head>
 <body>
-    <div id="game"></div>
+    <div id="app">
+        <div id="game"></div>
+    </div>
 
     <!-- TODO(piecioshka): odkomentować przed deployem -->
     <!--<a id="github-ribbon" href="https://github.com/rumblex/nodeknockout2016-dumplings">-->
