--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,17 @@
         <div id="game"></div>
     </div>
 
-    <!-- TODO(piecioshka): odkomentować przed deployem -->
-    <!--<a id="github-ribbon" href="https://github.com/rumblex/nodeknockout2016-dumplings">-->
-        <!--<img src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png">-->
-    <!--</a>-->
+    <a id="github-ribbon" href="https://github.com/rumblex/nodeknockout2016-dumplings" target="_blank">
+        <img src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png">
+    </a>
+
+    <a id="nko-vote-button" href="https://www.nodeknockout.com/entries/170-dumplings" target="_blank">
+        <img src="./assets/images/vote-nko.png" alt="Vote for us! Node Knockout hackathon"/>
+    </a>
+
+    <a id="twitter-share-button" href="https://twitter.com/intent/tweet?text=Did you already play in TAXI MAN? http://dumplings.2016.nodeknockout.com/" data-size="large" target="_blank">
+        <img src="./assets/images/twitter.jpg" alt="Vote for us! Node Knockout hackathon"/>
+    </a>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./dist/phaser.bundle.js"></script>
