Emoji in Twitter message

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <img src="./assets/images/vote-nko.png" alt="Vote for us! Node Knockout hackathon"/>
     </a>
 
-    <a id="twitter-share-button" href="https://twitter.com/intent/tweet?text=Did you already play in TAXI MAN? http://dumplings.2016.nodeknockout.com/" data-size="large" target="_blank">
+    <a id="twitter-share-button" href="https://twitter.com/intent/tweet?text=Did you already play in &#x1F696;  TAXI MAN? http://dumplings.2016.nodeknockout.com/ #nko2016" data-size="large" target="_blank">
         <img src="./assets/images/twitter.jpg" alt="Vote for us! Node Knockout hackathon"/>
     </a>
 
